@@ -16,6 +16,10 @@ o Added new NSE scripts:
     system, server build date, and upstream time server IP address.
     [Richard Sammet]
 
+o Removed a limitation of snmp.lua that only allowed it to properly
+  encode OID component values up to 127. The bug was reported by
+  Victor Rudnev. [David]
+
 Nmap 5.10BETA1 [2009-11-23]
 
 o Added 14 new NSE scripts for a grand total of 72! You can learn
